Src/Main/MetaDslx.Soal/SoalParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\balaz\AppData\Local\Temp\jhz3vnoa.xty\SoalParser.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace MetaDslx.Soal {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class SoalParser : Parser {
	public const int
		KNamespace=1, KEnum=2, KException=3, KStruct=4, KInterface=5, KThrows=6, 
		KOneway=7, KBinding=8, KTransport=9, KEncoding=10, KProtocol=11, KEndpoint=12, 
		KAddress=13, KDatabase=14, KEntity=15, KAbstract=16, KComponent=17, KComposite=18, 
		KReference=19, KService=20, KWire=21, KTo=22, KImplementation=23, KLanguage=24, 
		KAssembly=25, KDeployment=26, KEnvironment=27, KRuntime=28, KNull=29, 
		KTrue=30, KFalse=31, KObject=32, KString=33, KInt=34, KLong=35, KFloat=36, 
		KDouble=37, KByte=38, KBool=39, KAny=40, KVoid=41, TSemicolon=42, TColon=43, 
		TDot=44, TComma=45, TAssign=46, TOpenParen=47, TCloseParen=48, TOpenBracket=49, 
		TCloseBracket=50, TOpenBrace=51, TCloseBrace=52, TLessThan=53, TGreaterThan=54, 
		TQuestion=55, TQuestionQuestion=56, TAmpersand=57, THat=58, TBar=59, TAndAlso=60, 
		TOrElse=61, TPlusPlus=62, TMinusMinus=63, TPlus=64, TMinus=65, TTilde=66, 
		TExclamation=67, TSlash=68, TAsterisk=69, TPercent=70, TLessThanOrEqual=71, 
		TGreaterThanOrEqual=72, TEqual=73, TNotEqual=74, TAsteriskAssign=75, TSlashAssign=76, 
		TPercentAssign=77, TPlusAssign=78, TMinusAssign=79, TLeftShiftAssign=80, 
		TRightShiftAssign=81, TAmpersandAssign=82, THatAssign=83, TBarAssign=84, 
		IDate=85, ITime=86, IDateTime=87, ITimeSpan=88, IVersion=89, IMTOM=90, 
		ISSL=91, IHTTP=92, IREST=93, IWebSocket=94, ISOAP=95, IXML=96, IJSON=97, 
		IClientAuthentication=98, IdentifierNormal=99, IdentifierVerbatim=100, 
		IntegerLiteral=101, DecimalLiteral=102, ScientificLiteral=103, DateTimeOffsetLiteral=104, 
		DateTimeLiteral=105, DateLiteral=106, TimeLiteral=107, RegularStringLiteral=108, 
		GuidLiteral=109, UTF8BOM=110, WHITESPACE=111, CRLF=112, LINEBREAK=113, 
		LINE_COMMENT=114, COMMENT=115, DoubleQuoteVerbatimStringLiteral=116, SingleQuoteVerbatimStringLiteral=117, 
		DoubleQuoteVerbatimStringLiteralStart=118;
	public const int
		RULE_main = 0, RULE_qualifiedName = 1, RULE_identifierList = 2, RULE_qualifiedNameList = 3, 
		RULE_namespaceDeclaration = 4, RULE_declaration = 5, RULE_enumDeclaration = 6, 
		RULE_enumLiterals = 7, RULE_enumLiteral = 8, RULE_structDeclaration = 9, 
		RULE_exceptionDeclaration = 10, RULE_entityDeclaration = 11, RULE_propertyDeclaration = 12, 
		RULE_databaseDeclaration = 13, RULE_entityReference = 14, RULE_interfaceDeclaration = 15, 
		RULE_operationDeclaration = 16, RULE_parameterList = 17, RULE_parameter = 18, 
		RULE_componentDeclaration = 19, RULE_componentElements = 20, RULE_componentElement = 21, 
		RULE_componentService = 22, RULE_componentReference = 23, RULE_componentServiceOrReferenceBody = 24, 
		RULE_componentServiceOrReferenceElement = 25, RULE_componentProperty = 26, 
		RULE_componentImplementation = 27, RULE_componentLanguage = 28, RULE_compositeDeclaration = 29, 
		RULE_compositeElements = 30, RULE_compositeElement = 31, RULE_compositeComponent = 32, 
		RULE_compositeWire = 33, RULE_wireSource = 34, RULE_wireTarget = 35, RULE_deploymentDeclaration = 36, 
		RULE_deploymentElements = 37, RULE_deploymentElement = 38, RULE_environmentDeclaration = 39, 
		RULE_runtimeDeclaration = 40, RULE_runtimeReference = 41, RULE_assemblyReference = 42, 
		RULE_databaseReference = 43, RULE_bindingDeclaration = 44, RULE_bindingLayers = 45, 
		RULE_transportLayer = 46, RULE_httpTransportLayer = 47, RULE_restTransportLayer = 48, 
		RULE_webSocketTransportLayer = 49, RULE_httpTransportLayerProperties = 50, 
		RULE_httpSslProperty = 51, RULE_httpClientAuthenticationProperty = 52, 
		RULE_encodingLayer = 53, RULE_soapEncodingLayer = 54, RULE_xmlEncodingLayer = 55, 
		RULE_jsonEncodingLayer = 56, RULE_soapEncodingProperties = 57, RULE_soapVersionProperty = 58, 
		RULE_soapMtomProperty = 59, RULE_protocolLayer = 60, RULE_protocolLayerKind = 61, 
		RULE_endpointDeclaration = 62, RULE_endpointProperties = 63, RULE_endpointProperty = 64, 
		RULE_endpointBindingProperty = 65, RULE_endpointAddressProperty = 66, 
		RULE_returnType = 67, RULE_typeReference = 68, RULE_simpleType = 69, RULE_referenceType = 70, 
		RULE_objectType = 71, RULE_primitiveType = 72, RULE_voidType = 73, RULE_onewayType = 74, 
		RULE_nullableType = 75, RULE_nonNullableType = 76, RULE_nonNullableArrayType = 77, 
		RULE_arrayType = 78, RULE_identifier = 79, RULE_literal = 80, RULE_nullLiteral = 81, 
		RULE_booleanLiteral = 82, RULE_integerLiteral = 83, RULE_decimalLiteral = 84, 
		RULE_scientificLiteral = 85, RULE_stringLiteral = 86, RULE_contextualKeywords = 87;
	public static readonly string[] ruleNames = {
		"main", "qualifiedName", "identifierList", "qualifiedNameList", "namespaceDeclaration", 
		"declaration", "enumDeclaration", "enumLiterals", "enumLiteral", "structDeclaration", 
		"exceptionDeclaration", "entityDeclaration", "propertyDeclaration", "databaseDeclaration", 
		"entityReference", "interfaceDeclaration", "operationDeclaration", "parameterList", 
		"parameter", "componentDeclaration", "componentElements", "componentElement", 
		"componentService", "componentReference", "componentServiceOrReferenceBody", 
		"componentServiceOrReferenceElement", "componentProperty", "componentImplementation", 
		"componentLanguage", "compositeDeclaration", "compositeElements", "compositeElement", 
		"compositeComponent", "compositeWire", "wireSource", "wireTarget", "deploymentDeclaration", 
		"deploymentElements", "deploymentElement", "environmentDeclaration", "runtimeDeclaration", 
		"runtimeReference", "assemblyReference", "databaseReference", "bindingDeclaration", 
		"bindingLayers", "transportLayer", "httpTransportLayer", "restTransportLayer", 
		"webSocketTransportLayer", "httpTransportLayerProperties", "httpSslProperty", 
		"httpClientAuthenticationProperty", "encodingLayer", "soapEncodingLayer", 
		"xmlEncodingLayer", "jsonEncodingLayer", "soapEncodingProperties", "soapVersionProperty", 
		"soapMtomProperty", "protocolLayer", "protocolLayerKind", "endpointDeclaration", 
		"endpointProperties", "endpointProperty", "endpointBindingProperty", "endpointAddressProperty", 
		"returnType", "typeReference", "simpleType", "referenceType", "objectType", 
		"primitiveType", "voidType", "onewayType", "nullableType", "nonNullableType", 
		"nonNullableArrayType", "arrayType", "identifier", "literal", "nullLiteral", 
		"booleanLiteral", "integerLiteral", "decimalLiteral", "scientificLiteral", 
		"stringLiteral", "contextualKeywords"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'enum'", "'exception'", "'struct'", "'interface'", 
		"'throws'", "'oneway'", "'binding'", "'transport'", "'encoding'", "'protocol'", 
		"'endpoint'", "'address'", "'database'", "'entity'", "'abstract'", "'component'", 
		"'composite'", "'reference'", "'service'", "'wire'", "'to'", "'implementation'", 
		"'language'", "'assembly'", "'deployment'", "'environment'", "'runtime'", 
		"'null'", "'true'", "'false'", "'object'", "'string'", "'int'", "'long'", 
		"'float'", "'double'", "'byte'", "'bool'", "'any'", "'void'", "';'", "':'", 
		"'.'", "','", "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", 
		"'>'", "'?'", "'??'", "'&'", "'^'", "'|'", "'&&'", "'||'", "'++'", "'--'", 
		"'+'", "'-'", "'~'", "'!'", "'/'", null, "'%'", "'<='", "'>='", "'=='", 
		"'!='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", 
		"'^='", "'|='", "'Date'", "'Time'", "'DateTime'", "'TimeSpan'", "'Version'", 
		"'MTOM'", "'SSL'", "'HTTP'", "'REST'", "'WebSocket'", "'SOAP'", "'XML'", 
		"'JSON'", "'ClientAuthentication'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'@\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KNamespace", "KEnum", "KException", "KStruct", "KInterface", "KThrows", 
		"KOneway", "KBinding", "KTransport", "KEncoding", "KProtocol", "KEndpoint", 
		"KAddress", "KDatabase", "KEntity", "KAbstract", "KComponent", "KComposite", 
		"KReference", "KService", "KWire", "KTo", "KImplementation", "KLanguage", 
		"KAssembly", "KDeployment", "KEnvironment", "KRuntime", "KNull", "KTrue", 
		"KFalse", "KObject", "KString", "KInt", "KLong", "KFloat", "KDouble", 
		"KByte", "KBool", "KAny", "KVoid", "TSemicolon", "TColon", "TDot", "TComma", 
		"TAssign", "TOpenParen", "TCloseParen", "TOpenBracket", "TCloseBracket", 
		"TOpenBrace", "TCloseBrace", "TLessThan", "TGreaterThan", "TQuestion", 
		"TQuestionQuestion", "TAmpersand", "THat", "TBar", "TAndAlso", "TOrElse", 
		"TPlusPlus", "TMinusMinus", "TPlus", "TMinus", "TTilde", "TExclamation", 
		"TSlash", "TAsterisk", "TPercent", "TLessThanOrEqual", "TGreaterThanOrEqual", 
		"TEqual", "TNotEqual", "TAsteriskAssign", "TSlashAssign", "TPercentAssign", 
		"TPlusAssign", "TMinusAssign", "TLeftShiftAssign", "TRightShiftAssign", 
		"TAmpersandAssign", "THatAssign", "TBarAssign", "IDate", "ITime", "IDateTime", 
		"ITimeSpan", "IVersion", "IMTOM", "ISSL", "IHTTP", "IREST", "IWebSocket", 
		"ISOAP", "IXML", "IJSON", "IClientAuthentication", "IdentifierNormal", 
		"IdentifierVerbatim", "IntegerLiteral", "DecimalLiteral", "ScientificLiteral", 
		"DateTimeOffsetLiteral", "DateTimeLiteral", "DateLiteral", "TimeLiteral", 
		"RegularStringLiteral", "GuidLiteral", "UTF8BOM", "WHITESPACE", "CRLF", 
		"LINEBREAK", "LINE_COMMENT", "COMMENT", "DoubleQuoteVerbatimStringLiteral", 
		"SingleQuoteVerbatimStringLiteral", "DoubleQuoteVerbatimStringLiteralStart"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SoalParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SoalParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class MainContext : ParserRuleContext {
		public NamespaceDeclarationContext[] namespaceDeclaration() {
			return GetRuleContexts<NamespaceDeclarationContext>();
		}
		public NamespaceDeclarationContext namespaceDeclaration(int i) {
			return GetRuleContext<NamespaceDeclarationContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 179;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==KNamespace) {
				{
				{
				State = 176; namespaceDeclaration();
				}
				}
				State = 181;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedNameContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] TDot() { return GetTokens(SoalParser.TDot); }
		public ITerminalNode TDot(int i) {
			return GetToken(SoalParser.TDot, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedName; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterQualifiedName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitQualifiedName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedNameContext qualifiedName() {
		QualifiedNameContext _localctx = new QualifiedNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_qualifiedName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 182; identifier();
			State = 187;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TDot) {
				{
				{
				State = 183; Match(TDot);
				State = 184; identifier();
				}
				}
				State = 189;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierListContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] TComma() { return GetTokens(SoalParser.TComma); }
		public ITerminalNode TComma(int i) {
			return GetToken(SoalParser.TComma, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifierList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterIdentifierList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitIdentifierList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierListContext identifierList() {
		IdentifierListContext _localctx = new IdentifierListContext(Context, State);
		EnterRule(_localctx, 4, RULE_identifierList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 190; identifier();
			State = 195;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TComma) {
				{
				{
				State = 191; Match(TComma);
				State = 192; identifier();
				}
				}
				State = 197;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedNameListContext : ParserRuleContext {
		public QualifiedNameContext[] qualifiedName() {
			return GetRuleContexts<QualifiedNameContext>();
		}
		public QualifiedNameContext qualifiedName(int i) {
			return GetRuleContext<QualifiedNameContext>(i);
		}
		public ITerminalNode[] TComma() { return GetTokens(SoalParser.TComma); }
		public ITerminalNode TComma(int i) {
			return GetToken(SoalParser.TComma, i);
		}
		public QualifiedNameListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedNameList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterQualifiedNameList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitQualifiedNameList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedNameList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedNameListContext qualifiedNameList() {
		QualifiedNameListContext _localctx = new QualifiedNameListContext(Context, State);
		EnterRule(_localctx, 6, RULE_qualifiedNameList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 198; qualifiedName();
			State = 203;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TComma) {
				{
				{
				State = 199; Match(TComma);
				State = 200; qualifiedName();
				}
				}
				State = 205;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceDeclarationContext : ParserRuleContext {
		public ITerminalNode KNamespace() { return GetToken(SoalParser.KNamespace, 0); }
		public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		public ITerminalNode TAssign() { return GetToken(SoalParser.TAssign, 0); }
		public StringLiteralContext stringLiteral() {
			return GetRuleContext<StringLiteralContext>(0);
		}
		public ITerminalNode TOpenBrace() { return GetToken(SoalParser.TOpenBrace, 0); }
		public ITerminalNode TCloseBrace() { return GetToken(SoalParser.TCloseBrace, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode TColon() { return GetToken(SoalParser.TColon, 0); }
		public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterNamespaceDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitNamespaceDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceDeclarationContext namespaceDeclaration() {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_namespaceDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 206; Match(KNamespace);
			State = 207; qualifiedName();
			State = 208; Match(TAssign);
			{
			State = 209; identifier();
			State = 210; Match(TColon);
			}
			State = 212; stringLiteral();
			State = 213; Match(TOpenBrace);
			State = 217;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEnum) | (1L << KException) | (1L << KStruct) | (1L << KInterface) | (1L << KBinding) | (1L << KEndpoint) | (1L << KDatabase) | (1L << KEntity) | (1L << KAbstract) | (1L << KComponent) | (1L << KComposite) | (1L << KAssembly) | (1L << KDeployment))) != 0)) {
				{
				{
				State = 214; declaration();
				}
				}
				State = 219;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 220; Match(TCloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
